Version 0.10.2
------------------------------------------------------------------------------
Changes to functions:
* `icc()`, `re_var()` and `get_re_var()` now support `glmmTMB`-objects.
* `pred_accuracy()` now also reports the standard error of accuracy, and gets a print-method.

Bug fixes:
* `pred_accuracy()` with cross-validation-method did not correctly account for the generated test data.

Version 0.10.1
------------------------------------------------------------------------------
General:

* Revised imports: Labelled data functions from package *sjmisc* have been moved to package *sjlabelled*.

New functions:
* `boot_est()` to return the estimate from bootstrap replicates.

Changes to functions:
* The `print()`-method for `svyglm.nb()`-objects now also prints confidence intervals.

Bug fixes:
* `se()` did not work for `icc()`-objects, when the mixed model had more than one random effect term.

Version 0.10.0
------------------------------------------------------------------------------
New functions:
* `cv_error()` and `cv_compare()` to compute the root mean squared error for test and training data from cross-validation.
* `props()` to calculate proportions in a vector, supporting multiple logical statements.
* `or_to_rr()` to convert odds ratio estimates into risk ratio estimates.
* `mn()`, `md()` and `sm()` to calculate mean, median or sum of a vector, but using `na.rm = TRUE` as default.
* S3-generics for `svyglm.nb`-models: `family()`, `print()`, `formula()`, `model.frame()` and `predict()`.

Bug fixes:
* Fixed error in computation of `mse()`.

Version 0.9.0
------------------------------------------------------------------------------
General:
* Functions `std()` and `center()` were removed and are now in the sjmisc-package (https://cran.r-project.org/package=sjmisc).

New functions:
* `svyglm.nb()` to compute survey-weighted negative binomial regressions.
* `xtab_statistics()` to compute various measures of assiciation for contingency tables.