@@ -29,7 +29,7 @@ Depends:
 Imports:
     broom,
     coin,
-    dplyr (>= 0.7.0),
+    dplyr (>= 0.7.1),
     lme4 (>= 1.1-12),
     lmtest (>= 0.9-34),
     glmmTMB,
