@@ -4,7 +4,7 @@
 \alias{smpsize_lmm}
 \title{Sample size for linear mixed models}
 \usage{
-smpsize_lmm(eff.size, df.n = NULL, power = 0.8, sig.level = 0.05, k,
+smpsize_lmm(eff.size, df.n = NULL, power = 0.8, sig.level = 0.05, k, n,
   icc = 0.05)
 }
 \arguments{
@@ -17,6 +17,9 @@ smpsize_lmm(eff.size, df.n = NULL, power = 0.8, sig.level = 0.05, k,
 \item{sig.level}{Significance level (Type I error probability).}
 
 \item{k}{Number of cluster groups (level-2-unit) in multilevel-design.}
+
+\item{n}{Optional, number of observations per cluster groups
+(level-2-unit) in multilevel-design.}
 
 \item{icc}{Expected intraclass correlation coefficient for multilevel-model.}
 }
@@ -45,14 +48,15 @@ The sample size calculation is based on a power-calculation for the
 }
 \examples{
 # Sample size for multilevel model with 30 cluster groups and a small to
-# medium effect size (Cohen's d) of 0.3. 29 subjects per cluster and
-# hence a total sample size of about 859 observations is needed.
+# medium effect size (Cohen's d) of 0.3. 27 subjects per cluster and
+# hence a total sample size of about 802 observations is needed.
 smpsize_lmm(eff.size = .3, k = 30)
 
 # Sample size for multilevel model with 20 cluster groups and a medium
-# to large effect size for linear models of 0.2. Nine subjects per cluster and
-# hence a total sample size of about 172 observations is needed.
+# to large effect size for linear models of 0.2. Five subjects per cluster and
+# hence a total sample size of about 107 observations is needed.
 smpsize_lmm(eff.size = .2, df.n = 5, k = 20, power = .9)
+
 
 }
 \references{
