@@ -6,6 +6,7 @@ Changes to functions:
 
 Bug fixes:
 * `pred_accuracy()` with cross-validation-method did not correctly account for the generated test data.
+* Fixed issue with calculation in `smpsize_lmm()`.
 
 Version 0.10.1
 ------------------------------------------------------------------------------
